Day16 Update for Deployment

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <a href="./Day14/index.html">DAY 14</a>
       </div>
       <div class="card">
-        <a href="">DAY 15</a>
+        <a href="https://devsnest-day15.vercel.app/">DAY 15</a>
       </div>
       <div class="card">
         <a href="">DAY 16</a>
